--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,7 +518,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 40px 0;
+  padding: 70px 0 0 0;
   overflow: hidden;
 }
 
@@ -560,6 +560,7 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+
 .about .content h3 {
   font-weight: 700;
   font-size: 28px;
@@ -1424,7 +1425,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   background: black;
-  padding: 0 0 30px 0;
+  padding: 120px;
   color: #fff;
   font-size: 14px;
 }
@@ -1572,6 +1573,10 @@ section {
   color: #fff;
 }
 
+#footer .footer-title {
+margin-bottom:  10px;
+}
+
 .btn-floating {
   position: fixed;
   left: 25px;
@@ -1695,5 +1700,8 @@ section {
 .box-image:hover {
   transform: scale(1.3);
 }
+
+
+
 /* #PromoAndArticle {
   /* background-color: #e2edff; */
